<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/light_black"
    android:clickable="true">

    <TextView
        android:id="@+id/game_fragment_exit_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="@string/exit_x"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/reaction_game_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reaction_time_game"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/reaction_game_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reaction_time_how_to_play"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:padding="30dp"
        app:layout_constraintTop_toBottomOf="@id/reaction_game_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/reaction_game_start_button"/>

    <Button
        android:id="@+id/reaction_game_start_button"
        android:layout_width="120dp"
        android:layout_height="65dp"
        android:text="@string/start"
        android:textColor="@color/light_black"
        android:textStyle="bold"
        android:backgroundTint="@color/silver"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reaction_game_description"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/game_started_wait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reaction_time_waiting_description"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        android:padding="20dp"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/your_reaction_time_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_reaction_time"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/reaction_timing"/>

    <TextView
        android:id="@+id/reaction_timing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="000 ms"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/reaction_time_play_again_button"
        android:layout_width="120dp"
        android:layout_height="65dp"
        android:text="@string/play_again"
        android:textColor="@color/light_black"
        android:textStyle="bold"
        android:backgroundTint="@color/silver"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reaction_timing"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>