<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700">

    <TextView
        android:id="@+id/force_start_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/force_start"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/jump_start_your_brain_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jump_start_your_brain"
        android:textSize="30sp"
        android:textStyle="italic"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@id/force_start_title"/>

    <TextView
        android:id="@+id/force_start_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min_2"
        android:textSize="60sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/jump_start_your_brain_title"/>

    <Button
        android:id="@+id/timer_start_button"
        android:layout_width="120dp"
        android:layout_height="65dp"
        android:backgroundTint="@color/silver"
        android:text="@string/start"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/force_start_timer"/>

    <TextView
        android:id="@+id/force_start_exit_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="@string/exit_x"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/force_star_tester"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:backgroundTint="@color/silver"
        android:text="testcmd"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>