<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700">

    <TextView
        android:id="@+id/pomodoro_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pomodoro_title"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/time_to_focus_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_to_focus"
        android:textSize="30sp"
        android:textStyle="italic"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@id/pomodoro_title"/>

    <TextView
        android:id="@+id/time_for_a_break_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_for_a_break_xd"
        android:textSize="30sp"
        android:textStyle="italic"
        android:textColor="@color/black"
        android:gravity="center"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/time_to_focus_title"/>

    <TextView
        android:id="@+id/pomodoro_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00:00"
        android:textSize="60sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/time_to_focus_title"/>

    <Button
        android:id="@+id/pomodoro_start"
        android:layout_width="120dp"
        android:layout_height="65dp"
        android:backgroundTint="@color/silver"
        android:text="@string/start"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pomodoro_timer"/>

    <TextView
        android:id="@+id/pomodoro_cycles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cycles left: %d"
        android:textSize="25sp"
        android:textStyle="italic"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pomodoro_start"/>

    <Button
        android:id="@+id/pomodoro_haptic_1"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:backgroundTint="@color/red"
        android:background="@drawable/circle_button"
        android:text="HAP 1"
        android:hapticFeedbackEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/pomodoro_exit_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="@string/exit_x"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>