<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <TextView
        android:id="@+id/exit_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="@string/exit_x"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/refresh_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:drawableStart="@drawable/ic_refresh"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/exit_btn"/>

    <TextView
        android:id="@+id/bt_devices_title"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:text="@string/bluetooth_devices"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/bt_discovering_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discovering"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/bt_devices_title"
        app:layout_constraintTop_toBottomOf="@+id/bt_devices_title"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_bt_devices"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fadeScrollbars="false"
        app:layout_constraintTop_toBottomOf="@+id/bt_discovering_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>