<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/teal_700">

    <TextView
        android:id="@+id/pomodoro_settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:text="@string/pomodoro_setting"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/time_in_minutes_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/time_minutes"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/pomodoro_timer_title"
        app:layout_constraintTop_toBottomOf="@+id/pomodoro_settings_title"/>

    <TextView
        android:id="@+id/pomodoro_timer_title"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/pomodoro_pomo_settings"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/light_black"
        app:layout_constraintTop_toBottomOf="@+id/time_in_minutes_title"
        app:layout_constraintStart_toStartOf="@+id/pomodoro_picker"
        app:layout_constraintEnd_toEndOf="@+id/pomodoro_picker"/>

    <NumberPicker
        android:id="@+id/pomodoro_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/pomodoro_timer_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/break_picker"/>

    <TextView
        android:id="@+id/break_timer_title"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/break_pomo_settings"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/light_black"
        app:layout_constraintTop_toBottomOf="@+id/time_in_minutes_title"
        app:layout_constraintStart_toStartOf="@+id/break_picker"
        app:layout_constraintEnd_toEndOf="@+id/break_picker"/>

    <NumberPicker
        android:id="@+id/break_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/pomodoro_picker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pomodoro_timer_title"/>


    <TextView
        android:id="@+id/num_cycles_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_cycles_pomo_settings"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/num_cycles_spinner"
        app:layout_constraintTop_toTopOf="@+id/num_cycles_spinner"
        app:layout_constraintBottom_toBottomOf="@+id/num_cycles_spinner"/>

    <Spinner
        android:id="@+id/num_cycles_spinner"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:background="@drawable/outline"
        android:entries="@array/num_cycles"
        android:gravity="center"
        tools:ignore="RtlSymmetry"
        android:layout_marginBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/num_cycles_title"
        app:layout_constraintTop_toBottomOf="@id/pomodoro_picker"/>

    <TextView
        android:id="@+id/eye_detection_enabler_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Eye Detection"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num_cycles_title"
        app:layout_constraintBottom_toTopOf="@+id/ok_btn_pomo_settings"
        app:layout_constraintEnd_toStartOf="@+id/eye_detection_switch"/>

    <Switch
        android:id="@+id/eye_detection_switch"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:theme="@style/SCBSwitch"
        app:layout_constraintEnd_toEndOf="@+id/num_cycles_spinner"
        app:layout_constraintTop_toBottomOf="@+id/num_cycles_spinner"
        app:layout_constraintStart_toStartOf="@+id/num_cycles_spinner"
        app:layout_constraintBottom_toTopOf="@+id/ok_btn_pomo_settings"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/ok_btn_pomo_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_black"
        android:layout_marginBottom="10dp"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>