<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_title"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/settings_body"/>

    <GridLayout
        android:id="@+id/settings_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:useDefaultMargins="false"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/settings_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/bluetooth_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bluetooth"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/bluetooth_on_off"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@drawable/outline"
            android:text="@string/on"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/get_paired_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/bluetooth_connect"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@drawable/outline"
            android:text="@string/connect"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"/>

        <TextView
            android:layout_width="200dp"
            android:layout_height="1dp"
            android:background="@color/white"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="180dp"
            android:layout_height="1dp"
            android:background="@color/white"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:id="@+id/space_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/space"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_gravity="center"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Spinner
                android:id="@+id/space_spinner"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@drawable/outline"
                android:entries="@array/space_entry"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:gravity="center"
                tools:ignore="RtlSymmetry" />
        </RelativeLayout>

        <TextView
            android:layout_width="200dp"
            android:layout_height="1dp"
            android:background="@color/white"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="180dp"
            android:layout_height="1dp"
            android:background="@color/white"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"/>

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>